--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "license": "MIT",
 
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "webignition/html-validator-output-parser":">=0.2"                
     },
 
     "autoload": {
@@ -19,7 +20,6 @@
 
     "require-dev": {
         "symfony/class-loader": "*",
-        "phpunit/phpunit": "3.7.*",
-        "webignition/html-validator-output-parser":">=0.1"
+        "phpunit/phpunit": "3.7.*"
     }
 }
