--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 
     "require": {
         "php": ">=5.3.2",
-        "webignition/html-validator-output-parser":">=0.6"                
+        "webignition/html-validator-output-parser":">=0.7,<1.0"
     },
 
     "autoload": {
@@ -20,6 +20,6 @@
 
     "require-dev": {
         "symfony/class-loader": "*",
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "~4.0"
     }
 }
