--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,32 @@
     "keywords": ["html", "validator"],
     "homepage": "https://github.com/webignition/html-validator-wrapper",
     "license": "MIT",
-
+    "autoload": {
+        "psr-4": {
+            "webignition\\HtmlValidator\\Wrapper\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "webignition\\Tests\\HtmlValidator\\Wrapper\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit -c phpunit.ci.xml --colors=always",
+        "cs": "./vendor/bin/phpcs src tests --colors --standard=PSR2",
+        "ci": [
+            "@composer cs",
+            "@composer test"
+        ]
+    },
     "require": {
         "php": ">=5.3.2",
         "webignition/html-validator-output-parser":">=0.7,<1.0"
     },
-
-    "autoload": {
-        "psr-0": {
-            "webignition\\Tests": "tests/",
-            "": "src/"
-        }
-    },
-
     "require-dev": {
-        "symfony/class-loader": "*",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "squizlabs/php_codesniffer": "3.*",
+        "mockery/mockery": "~0.9",
+        "php-mock/php-mock-mockery": "1.1.0"
     }
 }
