--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 sudo: false
 language: php
 php:
-  - 5.5
   - 5.6
   - 7
+  - 7.1
+  - 7.2
 
 install:
-  - composer install
+  - composer install --prefer-dist
 
 script:
-  - mkdir -p build/logs
   - composer cs
   - composer test
+
+cache:
+  directories:
+    - $HOME/.composer/cache/files
