--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit -c phpunit.ci.xml --colors=always",
+        "test": "./vendor/bin/phpunit --colors=always",
         "cs": "./vendor/bin/phpcs src tests --colors --standard=PSR2",
         "ci": [
             "@composer cs",
@@ -24,11 +24,11 @@
         ]
     },
     "require": {
-        "php": ">=5.3.2",
+        "php": ">=5.6",
         "webignition/html-validator-output-parser":">=0.7,<1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~5.0",
         "squizlabs/php_codesniffer": "3.*",
         "mockery/mockery": "~0.9",
         "php-mock/php-mock-mockery": "1.1.0"
