--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
         ]
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.2",
         "webignition/html-validator-output-parser":">=0.8,<1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0",
-        "squizlabs/php_codesniffer": "3.*",
-        "mockery/mockery": "~0.9",
-        "php-mock/php-mock-mockery": "1.1.0"
+        "phpunit/phpunit": "^7.0",
+        "squizlabs/php_codesniffer": "^3",
+        "mockery/mockery": "^1",
+        "php-mock/php-mock-mockery": "^1"
     }
 }
