--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require": {
         "php": ">=7.2",
-        "webignition/html-validator-output-parser":">=0.8,<1.0"
+        "webignition/html-validator-output-parser":"^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
