--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "phpunit/phpunit": "^7.0",
         "squizlabs/php_codesniffer": "^3",
         "mockery/mockery": "^1",
-        "php-mock/php-mock-mockery": "^1"
+        "php-mock/php-mock-mockery": "^1",
+        "phpstan/phpstan": "^0.11.1"
     }
 }
