--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "squizlabs/php_codesniffer": "^3",
         "mockery/mockery": "^1",
         "php-mock/php-mock-mockery": "^1",
-        "phpstan/phpstan": "^0.11.1"
+        "phpstan/phpstan": "^0.11.1",
+        "phpstan/phpstan-mockery": "^0.11.0"
     }
 }
