--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: php
 php:
   - 7.2
@@ -7,6 +6,7 @@ install:
   - composer install --prefer-dist
 
 script:
+  - composer static-analysis
   - composer cs
   - composer test
 
