--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         }
     },
     "scripts": {
+        "static-analysis": "./vendor/bin/phpstan analyse -c phpstan.neon src tests --level=7",
         "test": "./vendor/bin/phpunit --colors=always",
         "cs": "./vendor/bin/phpcs src tests --colors --standard=PSR2",
         "ci": [
             "@composer cs",
+            "@composer static-analysis",
             "@composer test"
         ]
     },
