--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         }
     },
     "scripts": {
+        "static-analysis": "./vendor/bin/phpstan analyse -c phpstan.neon src tests --level=7",
         "test": "./vendor/bin/phpunit --colors=always",
         "cs": "./vendor/bin/phpcs src tests --colors --standard=PSR2",
         "ci": [
             "@composer cs",
+            "@composer static-analysis",
             "@composer test"
         ]
     },
@@ -31,6 +33,8 @@
         "phpunit/phpunit": "^7.0",
         "squizlabs/php_codesniffer": "^3",
         "mockery/mockery": "^1",
-        "php-mock/php-mock-mockery": "^1"
+        "php-mock/php-mock-mockery": "^1",
+        "phpstan/phpstan": "^0.11.1",
+        "phpstan/phpstan-mockery": "^0.11.0"
     }
 }
